--- a/gb/20/1/1/n11759960.md
+++ b/gb/20/1/1/n11759960.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ublry267/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ublry267/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ublry267/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ublry267/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ublry267/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ublry267/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ublry267/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ublry267/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ublry267/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ublry267/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ublry267/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/ublry267/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ublry267/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ublry267/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ublry267/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ublry267/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ublry267/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ublry267/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ublry267/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ublry267/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/ublry267/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/ublry267/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/ublry267/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/ublry267/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ublry267/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ublry267/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ublry267/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ublry267/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ublry267/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ublry267/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ublry267/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ublry267/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/ublry267/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ublry267/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ublry267/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ublry267/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>中共惧怕《反渗透法》 偷换焦点、渲染恐怖</h2>
-<img width="600" src="http://i.epochtimes.com/assets/uploads/2019/12/420148-600x400.jpg" />
-<h6>台湾立法院会12月31日三读通过《反渗透法》，（陈柏州／大纪元）
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/tjvrql262/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>程晓容：惧《反渗透法》中共偷换焦点渲染恐怖</h2>
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2019/12/420148-600x400.jpg" />
+<h6>台湾立法院会2019年12月31日三读通过《反渗透法》，（陈柏州／大纪元）
 </h6>
 <hr>
-<p>【大纪元2020年01月01日讯】12月31日，台湾立法院会三读通过《<a href="https://github.com/ublry267/djy/blob/master/gb/tag/%E5%8F%8D%E6%B8%97%E9%80%8F%E6%B3%95.md">反渗透法</a>》，在台海两岸引发震荡。支持者表示欣慰，中共国台办和官媒进行抨击。立法院长敲槌后不久，进驻北京核心地段、背景遭质疑的台湾新媒体《大师链》急发声明，宣布将“暂时放弃台湾市场，结束台湾业务”。显然，《反渗透法》的效力立竿见影。</p>
-<p>《<a href="https://github.com/ublry267/djy/blob/master/gb/tag/%E5%8F%8D%E6%B8%97%E9%80%8F%E6%B3%95.md">反渗透法</a>》明定，任何人不得接受渗透来源指示、委托或资助，捐赠政治献金、违法从事竞选活动，也不得就涉国安、国防、外交、两岸事务进行游说。违者最重处5年徒刑，得并科新台币1千万元以下罚金。</p>
+<p>【大纪元2020年01月01日讯】12月31日，台湾立法院会三读通过《<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E5%8F%8D%E6%B8%97%E9%80%8F%E6%B3%95.md#1">反渗透法</a>》，在台海两岸引发震荡。支持者表示欣慰，中共国台办和官媒进行抨击。立法院长敲槌后不久，进驻北京核心地段、背景遭质疑的台湾新媒体《大师链》急发声明，宣布将“暂时放弃台湾市场，结束台湾业务”。显然，《反渗透法》的效力立竿见影。</p>
+<p>《<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E5%8F%8D%E6%B8%97%E9%80%8F%E6%B3%95.md#1">反渗透法</a>》明定，任何人不得接受渗透来源指示、委托或资助，捐赠政治献金、违法从事竞选活动，也不得就涉国安、国防、外交、两岸事务进行游说。违者最重处5年徒刑，得并科新台币1千万元以下罚金。</p>
 <p>台湾绿党12月31日公布的民调显示，48.6%的民众支持《反渗透法》，反对者占19.7%，5.3%受访者无明确意见，还有26.3%的人不知道有此事。</p>
 <h2><strong>《</strong><strong>反渗透法</strong><strong>》之背景——中共全球渗透 危及台湾民主</strong></h2>
 <p>《反渗透法》剑指中共，有人说，这或许象征台湾步入抗共的2020年。立法院有此举措，与当前的国际背景和台湾事务紧密相连。</p>
@@ -16,9 +16,9 @@
 <p>再看台湾。一水之隔，中共对台渗透经过了多年的部署和运作，通过商业经营、收买媒体、拉拢政商和宗教人物、利用黑帮等方式分化内部以期颠覆。去年9月，“共产庙”碧云禅寺被拆除一事被广泛报导，红色势力暗藏庙宇的现象引起关注。</p>
 <p>今年8月9日，路透社在一篇文章中确认，中共当局付钱给至少5家台湾媒体集团，以换取各式平面刊物与一家电视频道的新闻报导。</p>
 <p>9月29日，香港歌手何韵诗在台北参加活动时被中华统一促进党高层胡志伟等人泼红漆，令公众震惊。当时有政治人物慨叹，何韵诗在香港都未遇袭，而此事竟在台湾发生。早前即有媒体爆料，中共一年付给“统促党”头目张安乐500万人民币、竹联帮3,000万人民币，鼓动其在台滋事。</p>
-<p>11月，中共前特工<a href="https://github.com/ublry267/djy/blob/master/gb/tag/%E7%8E%8B%E7%AB%8B%E5%BC%BA.md">王立强</a>披露了中共对香港、台湾和澳洲渗透的一些内幕，包括干预<a href="https://github.com/ublry267/djy/blob/master/gb/tag/%E5%8F%B0%E6%B9%BE2020%E5%A4%A7%E9%80%89.md">台湾2020大选</a>。他提供的信息得到了台湾情报单位的严肃对待。</p>
+<p>11月，中共前特工<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E7%8E%8B%E7%AB%8B%E5%BC%BA.md#1">王立强</a>披露了中共对香港、台湾和澳洲渗透的一些内幕，包括干预<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E5%8F%B0%E6%B9%BE2020%E5%A4%A7%E9%80%89.md#1">台湾2020大选</a>。他提供的信息得到了台湾情报单位的严肃对待。</p>
 <p>12月30日大纪元报导，据旅游业知情人士透露，12月中旬，台湾某旅游协会带领多位旅行社负责人前往大陆，与“国台办”洽商恢复陆客来台事宜。中共方面对台湾业者提出三点要求，均涉及2020大选，包括第一，若民进党胜选，将持续停办陆客赴台自由行，但可考虑在过年期间推动陆客赴高雄旅游；第二，虽然考虑尽速恢复陆人赴台旅游，但前提必须是国民党执政；第三，若韩国瑜赢得总统选举，将于过年后先开放部分陆团与自由行，到国民党执政的县市，再逐步增加团次与人数。政治大学国家发展研究所教授李酉潭表示，此事正表明了《反渗透法》的必要性。</p>
-<p>几十年来，中共持续对台湾威胁和渗透，自上世纪70年代末起，中共因“改革开放”之需对台“示好”，吸引了大批台商赴大陆投资，令中国经济获益不少。即使如此，中共的文攻武吓从未放松，一直以“分裂祖国”掩盖中共暴政之不得人心。因此，反<a href="https://github.com/ublry267/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E6%B8%97%E9%80%8F.md">中共渗透</a>，是守护台湾自由民主的迫切而重要的措施。</p>
+<p>几十年来，中共持续对台湾威胁和渗透，自上世纪70年代末起，中共因“改革开放”之需对台“示好”，吸引了大批台商赴大陆投资，令中国经济获益不少。即使如此，中共的文攻武吓从未放松，一直以“分裂祖国”掩盖中共暴政之不得人心。因此，反<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E6%B8%97%E9%80%8F.md#1">中共渗透</a>，是守护台湾自由民主的迫切而重要的措施。</p>
 <h2><strong>中共偷换焦点 渲染恐怖</strong></h2>
 <p>蔡英文在《反渗透法》通过后，在脸书上强调：“反渗透法是反渗透，不是反交流！”</p>
 <p>中共国台办发言人曾于12月25日在记者会上声称，《反渗透法》一旦通过，凡是与民进党立场不同的政党、团体、人士，敢于批评民进党的媒体，来大陆就学就业的台胞，参加两岸交流合作的人士，都有可能被“莫须有”地扣帽子、打闷棍，遭到随意调查、罚款，甚至是判刑坐牢。发言人还用了制造“恐怖”、“禁限两岸交流交往”、“捞取选举私利”、“损害台湾同胞利益”等字眼。</p>
@@ -39,38 +39,42 @@
 
 <hr>
 
-#### 本文转自<a href="http://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="http://www.epochtimes.com/gb/20/1/1/n11759960.htm">中共惧怕《反渗透法》 偷换焦点、渲染恐怖</a>
 
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="http://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="http://www.epochtimes.com/gb/19/12/31/n11758754.htm">韩国瑜连喊三声习主席 其副手不承认习头衔</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/31/n11758425.htm">《大师链》急退台湾市场 分析：反渗透法效果</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/30/n11756006.htm">总统辩论会 蔡英文读港人来信：不要相信中共</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/20/n11734967.htm">程晓容：台湾大选倒计时 三大因素不可忽视</a></li>
-> <li><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11757804.md">反渗透法三读 受渗透介选最重可判5年刑</a></li>
-> <li><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11759747.md">横河：台湾反渗透法对两岸的冲击</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="http://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="http://www.epochtimes.com/gb/19/12/31/n11758754.htm">韩国瑜连喊三声习主席 其副手不承认习头衔</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/31/n11758425.htm">《大师链》急退台湾市场 分析：反渗透法效果</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/30/n11756408.htm">【直播中】2020全球各地跨年倒计时</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/31/n11756804.htm">【翻墙必看】新年之际武汉惊传SARS疫情</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/26/n11745932.htm">《推背图》第45象 预言中共气数已尽</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11741785.htm">《兰亭序》异彩绝代 书法家赞天下第一行书</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11740590.htm">1979年 孙运璿《对共匪最近各种统战活动的严正声明》</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/25/n11745673.htm">父梦桂树 子梦黄鹤 奇梦超前预言一生</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/30/n11756102.htm">中共外交辞令出尽丑 “耿爽模拟器”被下架</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/30/n11754403.htm">天津强拆世界级别墅群 数百业主走投无路</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/29/n11753606.htm">白宫：若朝鲜试射远程导弹 美将采取行动</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/31/n11756845.htm">《拍案惊奇》2020台湾大选两类观点引关注</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/30/n11756075.htm">【新闻看点】法媒：2019 北京的恐怖之年</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/31/n11757755.htm">“人权与生俱来” 英巴士公司老板赞港人抗争</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/29/n11753643.htm">汤唯面对镜头洒泪 揭开女星不为人知的尴尬</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/30/n11756136.htm">传陆片《八佰》再遭撤档 被审查11处涉敏感</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/30/n11755952.htm">李英爱晒龙凤胎近照 夸儿子是爱妹妹的好哥哥</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/30/n11754467.htm">IZ*ONE与X1将重启活动 选秀真实排名不公开</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/31/n11757023.htm">苏慧伦将登跨年舞台 谈幸福事：与家人出游</a></li>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/12/31/n11758754.md#1">韩国瑜连喊三声习主席 其副手不承认习头衔</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/12/31/n11758425.md#1">《大师链》急退台湾市场 分析：反渗透法效果</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/12/30/n11756006.md#1">总统辩论会 蔡英文读港人来信：不要相信中共</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/12/20/n11734967.md#1">程晓容：台湾大选倒计时 三大因素不可忽视</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11759960.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ublry267/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ublry267/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ublry267/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ublry267/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ublry267/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ublry267/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ublry267/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ublry267/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ublry267/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ublry267/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ublry267/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ublry267/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ublry267/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ublry267/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ublry267/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ublry267/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ublry267/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ublry267/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ublry267/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ublry267/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ublry267/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ublry267/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ublry267/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ublry267/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ublry267/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ublry267/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ublry267/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11935263.md#1">澳医学协会西澳主席：学校将关闭</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/17/n9856265.md#1" target="_blank">毛泽东诗词中的“真情”与马列婚外情</a></li><li><a href="https://github.com/tjvrql262/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/7/18/n8113015.md#1" target="_blank">融入东方智慧 西人健康顾问获提振</a></li>
+<hr>
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943071.md#1">【现场视频】武汉医生揭中共关闭方舱内幕</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942593.md#1">【疫情透视】港抗疫显奇迹 天灭中共成保命符</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943372.md#1">“回国避疫”和“中国式撤侨”的真相</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942860.md#1">【最新疫情3.16】旧金山地区700万人居家防疫</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/18/n11877949.md#1">古今中外预言中的2020年</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/29/n11905232.md#1">蝗虫群攻官府异象 为何吃尽画像人头？</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11925830.md#1">被扒皮的法官</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/28/n11903572.md#1">末代国君的风范 顺从天意的元惠宗</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942373.md#1">图证蝗虫大军肆虐 中共急定预案恐难应对</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11940769.md#1">【新闻看点】病毒来自哪里？川普：中美都知道</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11941017.md#1">【现场视频】东莞虎门镇现大量防暴警察</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11945347.md#1">武汉小区封楼20多天 又确诊2例 居民焦虑</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11944883.md#1">【胡乃文开讲】白粥治咳抗感冒！5种神奇食疗方 止咳很实用</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11941189.md#1">【一线采访视频版】武汉市民：首先要活下来</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测新冠病毒</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943288.md#1">古巨基宣布当爸 晒宝宝合照分享喜悦</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943213.md#1">又一好莱坞明星确诊 007邦女郎隔离在家</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/1/1/n11759960.htm">程晓容：惧《反渗透法》中共偷换焦点渲染恐怖</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/tjvrql262/djy/blob/master/gb/20/1/1/n11759960.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
